--- a/data/ui/colourpane.ui
+++ b/data/ui/colourpane.ui
@@ -76,7 +76,7 @@
       </packing>
     </child>
     <child>
-      <!-- n-columns=4 n-rows=2 -->
+      <!-- n-columns=5 n-rows=2 -->
       <object class="GtkGrid" id="sizes">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
@@ -96,7 +96,7 @@
             <property name="icon-name">com.github.lainsce.icon-preview</property>
           </object>
           <packing>
-            <property name="left-attach">3</property>
+            <property name="left-attach">4</property>
             <property name="top-attach">0</property>
           </packing>
         </child>
@@ -108,7 +108,7 @@
             <property name="width-chars">8</property>
           </object>
           <packing>
-            <property name="left-attach">3</property>
+            <property name="left-attach">4</property>
             <property name="top-attach">1</property>
           </packing>
         </child>
@@ -122,7 +122,7 @@
             <property name="icon-name">com.github.lainsce.icon-preview</property>
           </object>
           <packing>
-            <property name="left-attach">2</property>
+            <property name="left-attach">3</property>
             <property name="top-attach">0</property>
           </packing>
         </child>
@@ -134,7 +134,7 @@
             <property name="width-chars">8</property>
           </object>
           <packing>
-            <property name="left-attach">2</property>
+            <property name="left-attach">3</property>
             <property name="top-attach">1</property>
           </packing>
         </child>
@@ -190,6 +190,32 @@
           </object>
           <packing>
             <property name="left-attach">0</property>
+            <property name="top-attach">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkImage">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="halign">center</property>
+            <property name="valign">end</property>
+            <property name="pixel-size">48</property>
+            <property name="icon-name">com.github.lainsce.icon-preview</property>
+          </object>
+          <packing>
+            <property name="left-attach">2</property>
+            <property name="top-attach">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="label">48</property>
+            <property name="width-chars">8</property>
+          </object>
+          <packing>
+            <property name="left-attach">2</property>
             <property name="top-attach">1</property>
           </packing>
         </child>
