--- a/data/ui/mainwindow.ui
+++ b/data/ui/mainwindow.ui
@@ -10,6 +10,8 @@
       <object class="GtkGrid">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
+        <property name="margin-top">6</property>
+        <property name="margin-bottom">6</property>
         <property name="row-spacing">6</property>
         <property name="column-homogeneous">True</property>
         <child>
