--- a/data/ui/iconsaver.ui
+++ b/data/ui/iconsaver.ui
@@ -62,8 +62,9 @@
           <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="margin-start">18</property>
-            <property name="margin-end">18</property>
+            <property name="margin-start">12</property>
+            <property name="margin-end">12</property>
+            <property name="margin-top">12</property>
             <property name="margin-bottom">12</property>
             <property name="orientation">vertical</property>
             <property name="spacing">6</property>
