--- a/data/ui/newiconwizard.ui
+++ b/data/ui/newiconwizard.ui
@@ -72,6 +72,10 @@
               <object class="GtkGrid">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <property name="margin-start">12</property>
+                <property name="margin-end">12</property>
+                <property name="margin-top">12</property>
+                <property name="margin-bottom">12</property>
                 <property name="row-spacing">6</property>
                 <property name="column-spacing">12</property>
                 <child>
